[package]
name = "smithy"
version = "0.0.1"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]
description = "A Rust framework for front-end web development"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "asmjs", "webasm", "javascript"]
categories = ["gui", "web-programming"]
repository = "https://github.com/rbalicki2/smithy"
homepage = "https://github.com/rbalicki2/smithy"

[dependencies]
