[package]
name = "smithy"
version = "0.0.1"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]
description = "A Rust framework for front-end web development"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "asmjs", "webasm", "javascript", "webassembly", "wasm"]
categories = ["gui", "web-programming"]
repository = "https://github.com/rbalicki2/smithy"
homepage = "https://github.com/rbalicki2/smithy"

[dependencies]
wasm-bindgen = { version = "0.2.21", features = ["nightly"] }
js-sys = "0.2.6"
web-sys = { version = "0.1", features = [
  "Document",
  "DocumentFragment",
  "Element",
  "Window",
  "HtmlElement",
  "HtmlTemplateElement",
  "Event",
  "UiEvent",
  "MouseEvent",
  "KeyboardEvent",
  "InputEvent",
  "EventTarget",
  "Node",
  "NodeList"
] }
jsx_types = { path = "../jsx_compiler/jsx_types" }
serde = "1.0.62"
serde_json = "1.0.18"
serde_derive = "1.0.62"
